design home page header ui

--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,6 @@ img {
 
 :root {
   --text-primary: #ffffff;
-  --text-secondary: #295082;
+  --text-secondary: #1E3796;
   --text-gray: #545050;
 }
