--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,9 @@
 }
 
 body {
-  /* background: linear-gradient(274deg, #518DA5 0%, #F5F5F5 100%); */
-  background: linear-gradient(274deg, #F5F5F5 0%, #518DA5 100%);
   font-family: "Inter", sans-serif;
+  /* background-image: linear-gradient(45deg, #f5f5f5 0%, #7db3c9 29%, #518da5 66%, #f5f5f5 100%); */
+  background-image: linear-gradient(45deg, #f5f5f5 0%, #7db3c9 29%, #7db3c9 66%, #f5f5f5 100%);
 }
 
 img {
